# my-launcher

./: CMakeLists.txt  LICENSE  README.md  appdefiles.cpp  appdefiles.h  apppanel.cpp  apppanel.h  apppanel.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
resources/: CMakeLists.txt  appinfo.json
src/: main.cpp
src/appinfo/: CMakeLists.txt  appdefines.cpp  appdefines.h  appfileio.cpp  appfileio.h
src/apputility/: CMakeLists.txt  apputility.cpp  apputility.h
src/ui/: CMakeLists.txt
src/ui/addappdialog/: CMakeLists.txt  addappdialog.cpp  addappdialog.h  addappdialog.ui
src/ui/apppanel/: CMakeLists.txt  apppanel.cpp  apppanel.ui
src/ui/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
translations/: CMakeLists.txt
